force-app/main/default/objects/contact__c/contact__c.object-meta.xml
<CustomObject>
    <label>Emergency Contact</label>
    <nameField>
        <label>id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>contact</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>