force-app/main/default/objects/contact__c/fields/customer__c.field-meta.xml
<CustomField>
    <fullName>customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>customer</label>
    <referenceTo>customer__c</referenceTo>
    <relationshipName>contact</relationshipName>
    <type>Lookup</type>
</CustomField>