force-app/main/default/objects/contact__c/fields/last_name__c.field-meta.xml
<CustomField>
    <fullName>last_name__c</fullName>
    <label>last name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>