force-app/main/default/objects/contact__c/fields/Passengers__c.field-meta.xml
<CustomField>
    <fullName>Passengers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passengers</label>
    <referenceTo>customer_POE__c</referenceTo>
    <relationshipLabel>contact</relationshipLabel>
    <relationshipName>contact</relationshipName>
    <type>Lookup</type>
</CustomField>