force-app/main/default/objects/contact__c/fields/phone__c.field-meta.xml
<CustomField>
    <fullName>phone__c</fullName>
    <label>phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>