force-app/main/default/objects/contact__c/fields/reference_number__c.field-meta.xml
<CustomField>
    <fullName>reference_number__c</fullName>
    <label>reference number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>