force-app/main/default/objects/contact__c/fields/relationship__c.field-meta.xml
<CustomField>
    <fullName>relationship__c</fullName>
    <label>relationship</label>
    <length>60</length>
    <type>Text</type>
</CustomField>