force-app/main/default/objects/contact__c/fields/timetrigger__c.field-meta.xml
<CustomField>
    <fullName>timetrigger__c</fullName>
    <formula>(NOW()  -  0.038)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>timetrigger</label>
    <type>DateTime</type>
</CustomField>