force-app/main/default/objects/contact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>reference_number__c</columns>
    <columns>customer__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>reference_number__c</field>
        <operation>equals</operation>
        <value>16459</value>
    </filters>
    <label>All</label>
</ListView>